// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Status /> should render Status component with APPROVED status 1`] = `
<div>
  <div
    class="sc-bdfBwQ efqQiE"
    type="APPROVED"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"
      />
    </svg>
     
    Aprovado
  </div>
</div>
`;

exports[`<Status /> should render Status component with DISAPPROVED status 1`] = `
<div>
  <div
    class="sc-bdfBwQ bvpPMx"
    type="DISAPPROVED"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 15v4a3 3 0 0 0 3 3l4-9V2H5.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3zm7-13h2.67A2.31 2.31 0 0 1 22 4v7a2.31 2.31 0 0 1-2.33 2H17"
      />
    </svg>
     
    Reprovado
  </div>
</div>
`;

exports[`<Status /> should render Status component with IN_VALIDATION status 1`] = `
<div>
  <div
    class="sc-bdfBwQ jlsfvO"
    type="IN_VALIDATION"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <polyline
        points="12 6 12 12 16 14"
      />
    </svg>
     
    Em validação
  </div>
</div>
`;

exports[`<Status /> should render Status component with no props 1`] = `
<div>
  <div
    class="sc-bdfBwQ cZGtNA"
  >
    <span />
     
  </div>
</div>
`;
